<resources>
    <string name="app_name">GUInmuebles</string>
    <string name="login">Ingresar</string>
    <string name="signup">Registrarse</string>
    <string name="name">Nombres</string>
    <string name="lastname">Apellidos</string>
    <string name="username">Nombre de usuario</string>
    <string name="forgot">Olvidaste tu contraseña?</string>
    <string name="getcode">Obtener codigo</string>
    <string name="code">Codigo</string>
    <string name="changepassword">Cambiar contraseña</string>
    <string name="emailnotvaliid">Correo no valido</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="repeatpassword">Repetir Contraseña</string>
    <string name="left">Faltan</string>
    <string name="codenotvalid">Codigo no valido</string>
</resources>